syntax = "proto3";

package flux;

option java_multiple_files = true;
option java_package = "com.flux.grpc.proto";
option java_outer_classname = "MessageProto";

service MessageService {
  rpc InsertMessage(InsertMessageRequest) returns (InsertMessageResponse);
  rpc GetMessage(GetMessageRequest) returns (Message);
  rpc StreamMessageHistory(StreamHistoryRequest) returns (stream Message);
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
}

message Message {
  int64 channel_id = 1;
  int64 message_id = 2;
  int64 author_id = 3;
  string content = 4;
  int64 timestamp = 5;
}

message InsertMessageRequest {
  int64 channel_id = 1;
  int64 message_id = 2;
  int64 author_id = 3;
  string content = 4;
}

message InsertMessageResponse {
  bool success = 1;
  string error = 2;
}

message GetMessageRequest {
  int64 channel_id = 1;
  int64 message_id = 2;
}

message StreamHistoryRequest {
  int64 channel_id = 1;
  int32 limit = 2;
}

message DeleteMessageRequest {
  int64 channel_id = 1;
  int64 message_id = 2;
}

message DeleteMessageResponse {
  bool success = 1;
}
